--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-24.04]
+        os: [windows-latest, ubuntu-24.04]
 
     steps:
       - uses: actions/checkout@v4
@@ -20,17 +20,9 @@ jobs:
           vulkan-components: Vulkan-Headers, Vulkan-Loader
           vulkan-use-cache: true
 
-      - name: Install build dependencies (macOS)
-        if: matrix.os == 'macos-latest'
-        run: brew install llvm ninja
-
       - name: Install build dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-24.04'
         run: sudo apt-get install ninja-build libc++-dev libc++abi-dev
-
-      - name: Workaround for CMake bug that cannot find __CMAKE::CXX23 target when using homebrew Clang
-        if: matrix.os == 'macos-latest'
-        run: sed -i '' 's|libc++.modules.json|../../c++/libc++.modules.json|g' /opt/homebrew/opt/cmake/share/cmake/Modules/Compiler/Clang-CXX-CXXImportStd.cmake # https://gitlab.kitware.com/cmake/cmake/-/issues/25965#note_1523575
 
       - name: Enable Developer Command Prompt (Windows)
         if: matrix.os == 'windows-latest'
